// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"

const name_0 = \\"Todos\\"
const adapterName_0 = undefined
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`base config works correctly [server] 1`] = `
"
import resolvers_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"
import projection_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value

const name_0 = \\"Todos\\"
const adapterName_0 = undefined
const resolvers_0 = resolvers_0_instance
const projection_0_hash = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const projection_0 = projection_0_instance

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
, adapterName: adapterName_0
, projection: projection_0
, invariantHash: projection_0_hash
})

export default readModels
"
`;

exports[`base(v2) config works correctly [client] 1`] = `
"

const name_0 = \\"Todos\\"
const adapterName_0 = undefined
const resolvers_0 = {
  todos() {},
  items() {}
}
const name_1 = \\"Items\\"
const adapterName_1 = undefined
const resolvers_1 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

readModels.push({
  name: name_1
, resolvers: resolvers_1
})

export default readModels
"
`;

exports[`base(v2) config works correctly [server] 1`] = `
"
import resolvers_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"
import projection_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_1_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"
import projection_1_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value

const name_0 = \\"Todos\\"
const adapterName_0 = undefined
const resolvers_0 = resolvers_0_instance
const projection_0_hash = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const projection_0 = projection_0_instance
const name_1 = \\"Items\\"
const adapterName_1 = undefined
const resolvers_1 = resolvers_1_instance
const projection_1_hash = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const projection_1 = projection_1_instance

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
, adapterName: adapterName_0
, projection: projection_0
, invariantHash: projection_0_hash
})

readModels.push({
  name: name_1
, resolvers: resolvers_1
, adapterName: adapterName_1
, projection: projection_1
, invariantHash: projection_1_hash
})

export default readModels
"
`;

exports[`config + process.env works correctly [client] 1`] = `
"

const name_0 = \\"Todos\\"
const adapterName_0 = undefined
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`config + process.env works correctly [server] 1`] = `
"
import resolvers_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testResolvers.js\\"
import projection_0_instance from \\"<MONOREPO_DIR>/core/resolve-scripts/test/alias/files/testProjection.js\\"
const constructorBindFunction =
    (
      constructorFunction,
      compileTimeOptions,
      compileTimeImports,
      runTimeOptions,
      runTimeImports
    ) => constructorFunction(
      { ...compileTimeOptions, ...runTimeOptions },
      { ...compileTimeImports, ...runTimeImports }
    )
const idempotentFunction = value => value

const name_0 = \\"Todos\\"
const adapterName_0 = undefined
const resolvers_0 = resolvers_0_instance
const projection_0_hash = \\"e111237317f05b862c7ea099ea1311369f25a01c6ce12768f20cd638ccb3ceec273e155dcbe328fed29eecc553502a19b162f0194f507b2a8a64f3dbc01b5322\\"
const projection_0 = projection_0_instance

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
, adapterName: adapterName_0
, projection: projection_0
, invariantHash: projection_0_hash
})

export default readModels
"
`;
